<resources>
    <string name="app_name">PromoApp</string>

    <string name="discover_nearby_devices">Ver ofertas</string>
    <string name="share_device_information">Anunciar</string>
    <string name="title_activity_tela_inicial">TelaInicial</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="ButtonAnuncio">Anunciar</string>
    <string name="ButtonOferta">Ofertas</string>
    <string name="ButtonCriarAnuncio">Criar Anuncio</string>
    <string name="anunciar">Anunciar</string>
    <string name="receberanuncio">Receber Anúncio</string>
    <string name="nomeProduto">Nome do produto:</string>
    <string name="telaCriaanuncio">Cadastre os produtos que deseja anunciar:</string>
    <string name="criaAnuncioProdutoNome">Nome do Produto:</string>

    <string name="criaAnuncioProdutoPreco">Preço do produto</string>
    <string name="linkProduto">Coloque o link do produto</string>
    <string name="title_anuncio_list">Anuncios</string>
    <string name="title_anuncio_detail">Anuncio Detail</string>
    <string name="tituloAnuncios">Anúncios</string>

    <string name="hintNomeAnuncio">Nome do Anúncio:</string>
    <string name="hintProdutoNome">Nome do Produto:</string>
    <string name="hintPrecoProduto">Preço do Produto:</string>
    <string name="hintLinkProduto">Coloque o link do produto:</string>
    <string name="anuncioLabel">Anúncio</string>
    <string name="title_promocao_list">Promocoes</string>
    <string name="title_promocao_detail">Promocao Detail</string>


</resources>
