<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.google.android.gms.nearby.messages.samples.nearbydevices.MainActivity">



    <Button
        android:id="@+id/buttonCrairAnuncio"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:text="@string/ButtonCriarAnuncio" />

    <Button
        android:id="@+id/buttonAnunciar"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:text="@string/ButtonAnuncio"
        android:onClick="openTelaAnuncio"

        />


    <Button
        android:id="@+id/buttonOfertas"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:text="@string/ButtonOferta" />
</LinearLayout>
