<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/anuncio_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".apresentacao.anuncio.AnuncioDetailFragment">

    <EditText
        android:id="@+id/nomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Nome do Anúncio"
        android:inputType="textPersonName"
        android:maxLength="10" />

    <EditText
        android:id="@+id/nomeProdutoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/criaAnuncioProdutoNome"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/precoProdutoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/criaAnuncioProdutoPreco"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/linkProdutoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/linkProduto"
        android:inputType="textPersonName" />

</LinearLayout>